--- a/LaoCat-auth/pom.xml
+++ b/LaoCat-auth/pom.xml
@@ -8,8 +8,9 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-
+    <packaging>jar</packaging>
     <artifactId>LaoCat-auth</artifactId>
+    <description>授权中心</description>
 
     <dependencies>
         <dependency>
