--- a/LaoCat-common/common-core/pom.xml
+++ b/LaoCat-common/common-core/pom.xml
@@ -11,6 +11,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>common-core</artifactId>
+    <description>核心组件</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
