--- a/LaoCat-getaway/pom.xml
+++ b/LaoCat-getaway/pom.xml
@@ -10,6 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>LaoCat-getaway</artifactId>
+    <description>网关中心</description>
+    <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
