fix(*):修改mybatis-plus相关依赖，补齐教程，将未覆盖的项目进行授权解除

--- a/LaoCat-user/pom.xml
+++ b/LaoCat-user/pom.xml
@@ -23,11 +23,12 @@
             <artifactId>common-data</artifactId>
             <version>${project.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.laocat</groupId>
-            <artifactId>common-auth</artifactId>
-            <version>${project.version}</version>
-        </dependency>
+<!--   覆盖后进行相应解注释     -->
+<!--        <dependency>-->
+<!--            <groupId>org.laocat</groupId>-->
+<!--            <artifactId>common-auth</artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>org.laocat</groupId>
