fix(*):调整验权模块，覆盖全项目模块。

--- a/LaoCat-common/common-auth/pom.xml
+++ b/LaoCat-common/common-auth/pom.xml
@@ -47,5 +47,16 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.laocat</groupId>
+            <artifactId>user-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-log</artifactId>
+        </dependency>
     </dependencies>
 </project>
