--- a/LaoCat-api/pom.xml
+++ b/LaoCat-api/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>LaoCat-Spring-Cloud-Scaffold</artifactId>
+        <artifactId>LaoCat-Scaffold</artifactId>
         <groupId>org.laocat</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
