--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,31 @@
         <module>LaoCat-api</module>
     </modules>
 
+    <developers>
+        <developer>
+            <name>LaoCat</name>
+            <email>laocat308@outlook.com</email>
+            <url>https://blog.csdn.net/ProGram_BlackCat</url>
+            <roles>
+                <role>Project Manager</role>
+                <role>Architect</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <contributors>
+        <contributor>
+            <name>Dabin</name>
+            <email>1606836458@qq.com</email>
+            <url>https://blog.csdn.net/weixin_48658588</url>
+            <roles>
+                <role>Project Contributors</role>
+                <role>Architect</role>
+            </roles>
+        </contributor>
+    </contributors>
+
+
     <properties>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
