feat(*):增加权限拦截

--- a/LaoCat-common/common-core/pom.xml
+++ b/LaoCat-common/common-core/pom.xml
@@ -52,6 +52,10 @@
             <artifactId>hutool-log</artifactId>
         </dependency>
         <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-extra</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.github.xiaoymin</groupId>
             <artifactId>knife4j-micro-spring-boot-starter</artifactId>
         </dependency>
