feat(*):增加序列化配置

--- a/LaoCat-common/pom.xml
+++ b/LaoCat-common/pom.xml
@@ -17,6 +17,7 @@
         <module>common-core</module>
         <module>common-auth</module>
         <module>common-data</module>
+        <module>common-cache</module>
     </modules>
 
 </project>
