--- a/LaoCat-common/common-auth/pom.xml
+++ b/LaoCat-common/common-auth/pom.xml
@@ -42,14 +42,14 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.laocat</groupId>
             <artifactId>user-api</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.laocat</groupId>
+            <artifactId>common-cache</artifactId>
             <version>${project.version}</version>
         </dependency>
     </dependencies>
