--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,7 @@
         <knife4j.version>3.0.2</knife4j.version>
         <swagger.version>1.6.2</swagger.version>
         <nacos.version>2.0.1</nacos.version>
-        <fastjson.version>1.2.83</fastjson.version>
+        <fastjson.version>2.0.8</fastjson.version>
     </properties>
 
     <dependencyManagement>
@@ -135,8 +135,8 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>fastjson</artifactId>
+            <groupId>com.alibaba.fastjson2</groupId>
+            <artifactId>fastjson2</artifactId>
             <version>${fastjson.version}</version>
         </dependency>
         <dependency>
