--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <module>LaoCat-getaway</module>
         <module>LaoCat-user</module>
         <module>LaoCat-api</module>
+        <module>LaoCat-common/common-dispatch</module>
+        <module>LaoCat-job</module>
     </modules>
 
     <developers>
@@ -155,6 +157,11 @@
         <dependency>
             <groupId>io.micrometer</groupId>
             <artifactId>micrometer-registry-prometheus</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-context</artifactId>
         </dependency>
     </dependencies>
 
