feat(File*): ✨ 新增文件相关

--- a/LaoCat-common/common-file/pom.xml
+++ b/LaoCat-common/common-file/pom.xml
@@ -10,17 +10,24 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-    <description>xxl-job相关</description>
-    <artifactId>common-dispatch</artifactId>
+    <description>文件相关</description>
+    <artifactId>common-file</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
-        <!-- xxl-job-core -->
         <dependency>
-            <groupId>com.xuxueli</groupId>
-            <artifactId>xxl-job-core</artifactId>
-            <version>${xxl-job.version}</version>
+            <groupId>io.minio</groupId>
+            <artifactId>minio</artifactId>
+            <version>${minio.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.qiniu</groupId>
+            <artifactId>qiniu-java-sdk</artifactId>
+            <version>${qiniu.version}</version>
         </dependency>
     </dependencies>
+
+
 
 </project>
