--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>LaoCat-api</module>
         <module>LaoCat-job</module>
         <module>LaoCat-file</module>
+        <module>LaoCat-flowable</module>
     </modules>
 
     <developers>
@@ -55,13 +56,14 @@
         <spring-fox.verison>3.0.0</spring-fox.verison>
         <knife4j.version>3.0.3</knife4j.version>
         <nacos.version>2.2.1</nacos.version>
-        <fastjson.version>2.0.20</fastjson.version>
+        <fastjson.version>2.0.32</fastjson.version>
         <jackson.version>2.14.2</jackson.version>
 
         <minio.version>8.5.0</minio.version>
         <qiniu.version>7.8.0</qiniu.version>
         <okhttp3.version>4.10.0</okhttp3.version>
         <xxl-job.version>2.3.1</xxl-job.version>
+        <flowable.version>6.7.0</flowable.version>
         <druid.version>1.2.9</druid.version>
         <mybatis-plus.version>3.3.2</mybatis-plus.version>
         <jjwt.version>0.9.0</jjwt.version>
